<resources>
    <string name="app_name">Inventory</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--   Strings for the navigation menu-->

    <string name="manage_transactions">Manage Transactions</string>
    <string name="manage_items">Manage Items</string>
    <string name="transaction_history">Transaction History</string>
    <string name="transfer_data">Transfer Data</string>
    <string name="out_of_stock_items">Stock Levels</string>
    <string name="low_stock_items">Low Stock Items</string>
    <string name="help">Help</string>

    <string name="action_add_location">Add location</string>
    <string name="title_activity_manage_items">ManageItemsActivity</string>
    <string name="title_activity_transaction_history">TransactionHistoryActivity</string>
    <string name="title_activity_transfer_data">TransferDataActivity</string>
    <string name="title_activity_out_of_stock">OutOfStockActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="stock_levels">Stock Levels</string>


</resources>
